Setting form action to test script

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -21,7 +21,7 @@
                 Message Text Area
                 Submit Button
             -->
-            <form >
+            <form action="/cgi-bin/test.js" method="GET">
                 <div>
                     <label>Name</label>
                     <input name="name" type="text"/>                
