Adding contact us thank you page. Setting contact us form action.

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -21,18 +21,18 @@
                 Message Text Area
                 Submit Button
             -->
-            <form action="/cgi-bin/test.js" method="GET">
+            <form action="/cgi-bin/contact-us-script" method="GET">
                 <div>
                     <label>Name</label>
-                    <input name="name" type="text"/>                
+                    <input name="customerName" type="text"/>                
                 </div>
                 <div>
                     <label>Email Address</label>
-                    <input name="emailAddress" type="text"/>                
+                    <input name="customerEmailAddress" type="text"/>                
                 </div>
                 <div>
                     <label>Subject</label>
-                    <input name="subject" type="text"/>
+                    <input name="messageSubject" type="text"/>
                 </div>
                 <div>
                     <label>Message</label>
