Updating contact form action

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -21,7 +21,7 @@
                 Message Text Area
                 Submit Button
             -->
-            <form action="/cgi-bin/contact-us-script" method="GET">
+            <form action="/cgi-bin/contact-us-script/index.js" method="GET">
                 <div>
                     <label>Name</label>
                     <input name="customerName" type="text"/>                
