--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1><a href="..">Hello World Air Guns</a></h1>
         <ul class="top-nav">
-            <li><a href=".">Products</a></li>
+            <li><a href="../products/">Products</a></li>
             <li><a href="../about-us/">About Us</a></li>            
-            <li><a href="../contact-us/">Contact Us</a></li>
+            <li><a href=".">Contact Us</a></li>
         </ul>
         <div class="bread-crumbs">
             <a href="..">Home</a> / <a href=".">Contact Us</a>
